--- a/CS/한 권으로 읽는 컴퓨터 구조와 프로그래밍/1.언어란 무엇인가/3.비트.md
+++ b/CS/한 권으로 읽는 컴퓨터 구조와 프로그래밍/1.언어란 무엇인가/3.비트.md
@@ -4,6 +4,5 @@
 
 <br>
 
-```json
-비트는 데이터를 나타내는 최소 단위로 모든 데이터는 0과 1로 구성된다. 1개의 비트는 두 가지 상태를 나타낼 수 있으므로 n개의 비트로는 2ⁿ가지의 상태를 나타낼 수 있다.
-```
+> 비트는 데이터를 나타내는 최소 단위로 모든 데이터는 0과 1로 구성된다. 
+1개의 비트는 두 가지 상태를 나타낼 수 있으므로 n개의 비트로는 2ⁿ가지의 상태를 나타낼 수 있다.
