--- a/CS/한 권으로 읽는 컴퓨터 구조와 프로그래밍/1.언어란 무엇인가/4.논리 연산.md
+++ b/CS/한 권으로 읽는 컴퓨터 구조와 프로그래밍/1.언어란 무엇인가/4.논리 연산.md
@@ -17,7 +17,7 @@
 
 입력에 따라 연산을 최소화해 계산 속도를 높힘과 동시에 비용을 절감할 수 있다.
 
-```json
-a AND b = NOT (NOT a OR NOT b)
-a OR b = NOT (NOT a AND NOT b)
-```
+
+> a AND b = NOT (NOT a OR NOT b)
+>
+> a OR b = NOT (NOT a AND NOT b)
